# SVF-TreeSitter

./: .gitignore  CMakeLists.txt  README.md
include/svf-ts/: GepHandler.h  SVFIRVerifier.h  SimpleDataLayout.h  SvfShim.h  TSFrontend.h  TSICFGBuilder.h  TSIRBuilder.h  TSSymbolTable.h  TSTypeBuilder.h
scripts/: check_expected.py  compare_pts.py  extract_pts.py  run_compare.sh
src/: GepHandler.cpp  SVFIRVerifier.cpp  SimpleDataLayout.cpp  TSFrontend.cpp  TSICFGBuilder.cpp  TSIRBuilder.cpp  TSSymbolTable.cpp  TSTypeBuilder.cpp  main.cpp
tests/: CMakeLists.txt
tests/array/: 21_array_basic.c  22_array_var_index.c  23_array_of_struct.c
tests/basic/: 01_addr.c  02_copy.c  03_load.c  04_store.c  05_multi_level.c  07_global.c
tests/cast/: 41_cast_ptr.c
tests/control/: 51_if.c  52_loop.c
tests/inter/: 61_call.c
tests/pointer_arith/: 31_ptr_add.c
tests/struct/: 11_struct_field.c  12_struct_ptr.c  13_nested_dot.c  14_chain_arrow.c  15_global_struct.c  16_param_struct.c
